--- a/projeto/public/style.css
+++ b/projeto/public/style.css
@@ -22,11 +22,11 @@
 }
 
 /* borda vermelha em todos os elementos para debug */
-/*
-* {
+
+/* * {
   outline: red solid 1px;
-}
-*/
+} */
+
 
 body {
   margin: 0;
